Update score formatting for probes, uninstall app in cleanup.sh